Updated AboutHTML in bin/code with SonarLint findings (lang tag and title tag)

--- a/bin/code/AboutHTML.html
+++ b/bin/code/AboutHTML.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<html>
+<html  lang="en">
 	<head>
+		<title>About Text Document Analyzer</title>
 		<style>
 			body { margin:12px 24px; font-family: "Arial"; }
 			li { padding-left: 8px; }
