Fix Minor Code Smells reported by SonarLint
GUI. java
- CHANGE: (JFrame.DISPOSE_ON_CLOSE) to
(WindowConstants.DISPOSE_ON_CLOSE)
- REASON: In the interest of code clarity, static members of a base
class should never be accessed using a derived type’s name

--- a/bin/code/AboutHTML.html
+++ b/bin/code/AboutHTML.html
@@ -13,7 +13,7 @@
 		<ul>
 			<li>Laura McBride (Project Manager)</li>
 			<li>Jason Howarth (Test Manager)</li>
-			<li>John McGuire (Technical Writer & Requirements Manager)</li>
+			<li>John McGuire (Technical Writer and Requirements Manager)</li>
 			<li>Noah Gray (Software Developer)</li>
 			<li>Daniel Nester (Software Developer)</li>
 		</ul>
