--- a/src/code/AboutHTML.html
+++ b/src/code/AboutHTML.html
@@ -13,7 +13,7 @@
 		<ul>
 			<li>Laura McBride (Project Manager)</li>
 			<li>Jason Howarth (Test Manager)</li>
-			<li>John McGuire (Technical Writer & Requirements Manager)</li>
+			<li>John McGuire (Technical Writer and Requirements Manager)</li>
 			<li>Noah Gray (Software Developer)</li>
 			<li>Daniel Nester (Software Developer)</li>
 		</ul>
