--- a/src/code/UserGuideHTML.html
+++ b/src/code/UserGuideHTML.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<html>
+<html lang="en">
 	<head>
+	<title>TEXT DOCUMENT ANALYZER USER GUIDE</title>
 		<style>
 			body { margin:12px 24px; font-family: "Arial"; }
 			li { padding-left: 8px; }
