Fix Minor Code Smell, Fix HTML Display Issue, Add Version Variable,
1. Fix Minor Code Smell in GUI. java
- CHANGE: (JFrame.DISPOSE_ON_CLOSE) to
(WindowConstants.DISPOSE_ON_CLOSE)
- REASON: In the interest of code clarity, static members of a base
class should never be accessed using a derived type’s name (according to
SonarLint).

2. Fix HTML Display Code in GUI.java
- BUG: HTML files did not display in compiled JARs
- FIX: Revised code using JEditorPane page and exported with Extracted
libraries. Old code commented out in case fallback is needed. Will
remove old code if change works on multiple platforms.

3. Add Version Variable in TextDocumentANalyzer.java
VERSIONING: Added global public static variable with version to main
class.
Variable: tdaVersion
Purpose: can be called by GUI to display current version, using
TextDocumentAnalyzer.tdaVersion

--- a/bin/code/AboutHTML.html
+++ b/bin/code/AboutHTML.html
@@ -8,7 +8,7 @@
 		</style>
 	</head>
 	<body>
-		<h2>ABOUT THE PROJECT</h2>
+		<h2>Text Document Analyzer</h2>
 		<p>The Text Document Analyzer was developed in the Fall semester by Group 4 for their CMSC 495 Capstone Experience course at UMGC. Team members included:</p>
 		<ul>
 			<li>Laura McBride (Project Manager)</li>
@@ -18,5 +18,7 @@
 			<li>Daniel Nester (Software Developer)</li>
 		</ul>
 		<p>The software was designed to parse literary documents and collect quantitative metrics that would be useful for literary analysis. Development took place over 8 weeks.</p>
+		
+		<p>GitHub Repository: <a href="https://github.com/tzvik15/Text-Document-Analyzer">https://github.com/tzvik15/Text-Document-Analyzer</a></p>
 	</body>
 </html>
