--- a/src/code/AboutHTML.html
+++ b/src/code/AboutHTML.html
@@ -8,7 +8,7 @@
 		</style>
 	</head>
 	<body>
-		<h2>ABOUT THE PROJECT</h2>
+		<h2>Text Document Analyzer</h2>
 		<p>The Text Document Analyzer was developed in the Fall semester by Group 4 for their CMSC 495 Capstone Experience course at UMGC. Team members included:</p>
 		<ul>
 			<li>Laura McBride (Project Manager)</li>
@@ -18,5 +18,7 @@
 			<li>Daniel Nester (Software Developer)</li>
 		</ul>
 		<p>The software was designed to parse literary documents and collect quantitative metrics that would be useful for literary analysis. Development took place over 8 weeks.</p>
+		
+		<p>GitHub Repository: <a href="https://github.com/tzvik15/Text-Document-Analyzer">https://github.com/tzvik15/Text-Document-Analyzer</a></p>
 	</body>
 </html>
