Updated UserGuide, About, and Version
1. UserGuide: Added description of Flesch reading Ease Scores to
UserGuide
2. Set version to 1.0 for release.
3. About: Added SQLIte JBDC license info.
4. Gui.java: fixed minor typo.

--- a/bin/code/AboutHTML.html
+++ b/bin/code/AboutHTML.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<h2>Text Document Analyzer</h2>
-		<p>The Text Document Analyzer was developed in the Fall semester by Group 4 for their CMSC 495 Capstone Experience course at UMGC. Team members included:</p>
+		<p>The Text Document Analyzer was developed in the 2022 Fall semester by Group 4 for their CMSC 495 Capstone Experience course at UMGC. Team members included:</p>
 		<ul>
 			<li>Laura McBride (Project Manager)</li>
 			<li>Jason Howarth (Test Manager)</li>
@@ -20,5 +20,8 @@
 		<p>The software was designed to parse literary documents and collect quantitative metrics that would be useful for literary analysis. Development took place over 8 weeks.</p>
 		
 		<p>GitHub Repository: <a href="https://github.com/tzvik15/Text-Document-Analyzer">https://github.com/tzvik15/Text-Document-Analyzer</a></p>
+		
+		<p>Text Document Analyzer uses <a href ="https://github.com/xerial/sqlite-jdbc">SQLite JDBC</a> under BSD-2-Clause License.</p> 
+		<p>SQLite JDBC is Copyright 2006, David Crawshaw. All rights reserved.</p>
 	</body>
 </html>
