--- a/bin/code/UserGuideHTML.html
+++ b/bin/code/UserGuideHTML.html
@@ -34,7 +34,18 @@
 			<li><strong>Average Syllables Per Word</strong> - average number of syllables in a word</li>
 			<li><strong>Distinct Words List</strong> - a list of unique words and their frequency</li>
 			<li><strong>Distinct Punctuation List</strong> - a list of unique punctuation marks and their frequency</li>
-			<li><strong>Flesch Reading Ease Score</strong> - a score relating the the reading level of the document</li>
+			<li><strong>Flesch Reading Ease Score</strong> - a score relating the the reading level of the document
+				<ul>
+					<li><strong>90-100:</strong> Very easy to read</li>
+					<li><strong> 80-90:</strong> Easy to read</li>
+					<li><strong> 70-80:</strong> Fairly easy to read</li>
+					<li><strong> 60-70:</strong> Plain English</li>
+					<li><strong> 50-60:</strong> Fairly difficult to read</li>
+					<li><strong> 30-50:</strong> Difficult to read</li>
+					<li><strong> 10-30:</strong> Very difficult to read</li>
+					<li><strong>  0-10:</strong> Extremely difficult to read</li>
+				</ul>
+			</li>
 		</ul>
 		<h3>1.2 HOW TO: UPLOAD TEXT DOCUMENT FOR ANALYSIS</h3>
 		<p>Uploading a text document for analysis can be done using the applications menu system and input components. Documents uploaded will be parsed by the application for metrics and all calculated data will be stored in the application database.</p>
